--- a/mosquitto.conf
+++ b/mosquitto.conf
@@ -13,7 +13,7 @@ persistence true
 persistence_location /var/lib/mosquitto/
 
 # Password file for authentication
-password_file passwd
+# password_file passwd
 
 # Allow anonymous connections
 allow_anonymous true
